workspace_kk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:33:16 **** Incremental Build of configuration Debug for project CMSIS_CORE_LPC11xx ****
make -r all 
make: Nothing to be done for 'all'.
18:33:19 **** Incremental Build of configuration Debug for project DDL_Lab4 ****
make -r -j2 all 
Building file: ../src/DDL_Lab4.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M0 -D__USE_CMSIS=CMSIS_CORE_LPC11xx -D__LPC11XX__ -D__REDLIB__ -I"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -specs=redlib.specs -MMD -MP -MF"src/DDL_Lab4.d" -MT"src/DDL_Lab4.o" -MT"src/DDL_Lab4.d" -o "src/DDL_Lab4.o" "../src/DDL_Lab4.c"
Finished building: ../src/DDL_Lab4.c
 
Building target: DDL_Lab4.axf
Invoking: MCU Linker
arm-none-eabi-gcc -nostdlib -L"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/Debug" -Xlinker -Map="DDL_Lab4.map" -Xlinker --gc-sections -Xlinker -print-memory-usage -mcpu=cortex-m0 -mthumb -T "DDL_Lab4_Debug.ld" -o "DDL_Lab4.axf"  ./src/DDL_Lab4.o ./src/cr_startup_lpc11xx.o ./src/crp.o   -lCMSIS_CORE_LPC11xx
Memory region         Used Size  Region Size  %age Used
        MFlash64:        1812 B        64 KB      2.76%
         RamLoc8:          16 B         8 KB      0.20%
Finished building target: DDL_Lab4.axf
 
make --no-print-directory post-build
Performing post-build steps
arm-none-eabi-size "DDL_Lab4.axf"; # arm-none-eabi-objcopy -v -O binary "DDL_Lab4.axf" "DDL_Lab4.bin" ; # checksum -p LPC1115_303 -d "DDL_Lab4.bin";
   text	   data	    bss	    dec	    hex	filename
   1812	      0	     16	   1828	    724	DDL_Lab4.axf
 
18:34:48 **** Incremental Build of configuration Debug for project DDL_Lab4 ****
make -r -j2 all 
Building file: ../src/DDL_Lab4.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M0 -D__USE_CMSIS=CMSIS_CORE_LPC11xx -D__LPC11XX__ -D__REDLIB__ -I"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -specs=redlib.specs -MMD -MP -MF"src/DDL_Lab4.d" -MT"src/DDL_Lab4.o" -MT"src/DDL_Lab4.d" -o "src/DDL_Lab4.o" "../src/DDL_Lab4.c"
Finished building: ../src/DDL_Lab4.c
 
Building target: DDL_Lab4.axf
Invoking: MCU Linker
arm-none-eabi-gcc -nostdlib -L"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/Debug" -Xlinker -Map="DDL_Lab4.map" -Xlinker --gc-sections -Xlinker -print-memory-usage -mcpu=cortex-m0 -mthumb -T "DDL_Lab4_Debug.ld" -o "DDL_Lab4.axf"  ./src/DDL_Lab4.o ./src/cr_startup_lpc11xx.o ./src/crp.o   -lCMSIS_CORE_LPC11xx
Memory region         Used Size  Region Size  %age Used
        MFlash64:        1800 B        64 KB      2.75%
         RamLoc8:          16 B         8 KB      0.20%
Finished building target: DDL_Lab4.axf
 
make --no-print-directory post-build
Performing post-build steps
arm-none-eabi-size "DDL_Lab4.axf"; # arm-none-eabi-objcopy -v -O binary "DDL_Lab4.axf" "DDL_Lab4.bin" ; # checksum -p LPC1115_303 -d "DDL_Lab4.bin";
   text	   data	    bss	    dec	    hex	filename
   1800	      0	     16	   1816	    718	DDL_Lab4.axf
 
18:35:40 **** Incremental Build of configuration Debug for project DDL_Lab4 ****
make -r -j2 all 
make: Nothing to be done for 'all'.
18:41:22 **** Incremental Build of configuration Debug for project DDL_Lab4 ****
make -r -j2 all 
Building file: ../src/DDL_Lab4.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M0 -D__USE_CMSIS=CMSIS_CORE_LPC11xx -D__LPC11XX__ -D__REDLIB__ -I"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -specs=redlib.specs -MMD -MP -MF"src/DDL_Lab4.d" -MT"src/DDL_Lab4.o" -MT"src/DDL_Lab4.d" -o "src/DDL_Lab4.o" "../src/DDL_Lab4.c"
../src/DDL_Lab4.c: In function 'TIMER32_0_IRQHandler':
../src/DDL_Lab4.c:266:3: error: 'LPTC_TMR32B0' undeclared (first use in this function); did you mean 'LPC_TMR32B0'?
   LPTC_TMR32B0 -> TC = 0;
   ^~~~~~~~~~~~
   LPC_TMR32B0
../src/DDL_Lab4.c:266:3: note: each undeclared identifier is reported only once for each function it appears in
src/subdir.mk:24: recipe for target 'src/DDL_Lab4.o' failed
make: *** [src/DDL_Lab4.o] Error 1
18:41:32 **** Incremental Build of configuration Debug for project DDL_Lab4 ****
make -r -j2 all 
Building file: ../src/DDL_Lab4.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M0 -D__USE_CMSIS=CMSIS_CORE_LPC11xx -D__LPC11XX__ -D__REDLIB__ -I"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -specs=redlib.specs -MMD -MP -MF"src/DDL_Lab4.d" -MT"src/DDL_Lab4.o" -MT"src/DDL_Lab4.d" -o "src/DDL_Lab4.o" "../src/DDL_Lab4.c"
Finished building: ../src/DDL_Lab4.c
 
Building target: DDL_Lab4.axf
Invoking: MCU Linker
arm-none-eabi-gcc -nostdlib -L"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/Debug" -Xlinker -Map="DDL_Lab4.map" -Xlinker --gc-sections -Xlinker -print-memory-usage -mcpu=cortex-m0 -mthumb -T "DDL_Lab4_Debug.ld" -o "DDL_Lab4.axf"  ./src/DDL_Lab4.o ./src/cr_startup_lpc11xx.o ./src/crp.o   -lCMSIS_CORE_LPC11xx
Memory region         Used Size  Region Size  %age Used
        MFlash64:        1804 B        64 KB      2.75%
         RamLoc8:          16 B         8 KB      0.20%
Finished building target: DDL_Lab4.axf
 
make --no-print-directory post-build
Performing post-build steps
arm-none-eabi-size "DDL_Lab4.axf"; # arm-none-eabi-objcopy -v -O binary "DDL_Lab4.axf" "DDL_Lab4.bin" ; # checksum -p LPC1115_303 -d "DDL_Lab4.bin";
   text	   data	    bss	    dec	    hex	filename
   1804	      0	     16	   1820	    71c	DDL_Lab4.axf
 
18:42:51 **** Incremental Build of configuration Debug for project DDL_Lab4 ****
make -r -j2 all 
make: Nothing to be done for 'all'.
18:45:12 **** Incremental Build of configuration Debug for project DDL_Lab4 ****
make -r -j2 all 
Building file: ../src/DDL_Lab4.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M0 -D__USE_CMSIS=CMSIS_CORE_LPC11xx -D__LPC11XX__ -D__REDLIB__ -I"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -specs=redlib.specs -MMD -MP -MF"src/DDL_Lab4.d" -MT"src/DDL_Lab4.o" -MT"src/DDL_Lab4.d" -o "src/DDL_Lab4.o" "../src/DDL_Lab4.c"
Finished building: ../src/DDL_Lab4.c
 
Building target: DDL_Lab4.axf
Invoking: MCU Linker
arm-none-eabi-gcc -nostdlib -L"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/Debug" -Xlinker -Map="DDL_Lab4.map" -Xlinker --gc-sections -Xlinker -print-memory-usage -mcpu=cortex-m0 -mthumb -T "DDL_Lab4_Debug.ld" -o "DDL_Lab4.axf"  ./src/DDL_Lab4.o ./src/cr_startup_lpc11xx.o ./src/crp.o   -lCMSIS_CORE_LPC11xx
Memory region         Used Size  Region Size  %age Used
        MFlash64:        1824 B        64 KB      2.78%
         RamLoc8:          16 B         8 KB      0.20%
Finished building target: DDL_Lab4.axf
 
make --no-print-directory post-build
Performing post-build steps
arm-none-eabi-size "DDL_Lab4.axf"; # arm-none-eabi-objcopy -v -O binary "DDL_Lab4.axf" "DDL_Lab4.bin" ; # checksum -p LPC1115_303 -d "DDL_Lab4.bin";
   text	   data	    bss	    dec	    hex	filename
   1824	      0	     16	   1840	    730	DDL_Lab4.axf
 
